# repo-warden

./: .gitignore  README.md  pyproject.toml
demos/: 01_branch_protection_gate.py  02_agent_device_flow.py  03_revocation_and_blast_radius.py  04_scope_ladder.py  05_pre_receive_hook.py  06_device_flow_timeout.py  07_device_flow_denied.py  08_slow_down_backoff.py  09_namespace_isolation.py  10_force_push_policy.py  11_protected_delete_guard.py  12_scope_escalation_blocked.py  13_token_lifecycle.py  14_hook_mixed_batch.py  15_hash_storage_proof.py  16_invalid_input_handling.py  17_agent_ci_pipeline.py  18_custom_policy.py  19_persistence_roundtrip.py  20_multi_agent_fleet.py  21_token_expiry.py  _common.py  run_all.py
docs/: ARCHITECTURE.md  DEMOS.md
repo_warden/: __init__.py  cli.py  deviceflow.py  store.py  warden.py
tests/: test_cli.py  test_demos.py  test_deviceflow.py  test_expiry.py  test_store.py  test_warden.py
