[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "repo-warden"
version = "0.1.0"
description = "Access governance for git repos you already host: RFC 8628 device-flow auth, scoped revocable tokens, and branch protection as a pre-receive hook."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "Apache-2.0" }
authors = [{ name = "Cognis Digital" }]
keywords = ["git", "governance", "rfc8628", "device-flow", "oauth", "branch-protection", "ai-agents", "tokens"]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: Apache Software License",
  "Topic :: Software Development :: Version Control :: Git",
  "Topic :: Security",
]
dependencies = []  # standard library only

[project.optional-dependencies]
dev = ["pytest>=7"]

[project.scripts]
repo-warden = "repo_warden.cli:main"

[project.urls]
Homepage = "https://github.com/cognis-digital/repo-warden"

[tool.setuptools]
packages = ["repo_warden"]

[tool.pytest.ini_options]
testpaths = ["tests"]
